--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,10 @@
 **/configuration-server/users.db
 
 .vagrant/
+
+inspectit-ocelot/chronograf/
+inspectit-ocelot/elasticsearch/
+inspectit-ocelot/influx/
+
+package.box
+package.crc
