--- a/inspectit-ocelot/docker-compose.yml
+++ b/inspectit-ocelot/docker-compose.yml
@@ -38,7 +38,7 @@ services:
         limits:
           memory: 256M
     volumes:
-      - ./eum-server:/eum-server
+      - ./eum-server/data:/eum-server
     ports:
       - 8085:8085
 
@@ -54,7 +54,8 @@ services:
         limits:
           memory: 512M
     volumes:
-      - ./influx:/docker-entrypoint-initdb.d
+      - ./influx/continous-queries.iql:/docker-entrypoint-initdb.d/continous-queries.iql
+      - ./influx/data:/var/lib/influxdb2
     ports:
       - 8086:8086
 
@@ -67,7 +68,7 @@ services:
     environment:
       ES_JAVA_OPTS: "-Xms512m -Xmx512m"
     volumes:
-      - ./elasticsearch:/usr/share/elasticsearch/data
+      - ./elasticsearch/data:/usr/share/elasticsearch/data
 
   kibana:
     image: docker.elastic.co/kibana/kibana-oss:6.7.1
