--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,21 +1,29 @@
 Vagrant.configure("2") do |config|
 
-  config.vm.define "inspectit-ocelot" do |h|
-    h.vm.box = "ubuntu/focal64"
-    h.vm.provider :virtualbox
+  # Box
+  config.vm.box = "ubuntu/focal64"
+  config.vm.box_version = "20230215.0.0"
 
-    h.vm.disk :disk, size: "20GB", primary: true
-  end
-
+  # General
+  config.vm.define "inspectit-ocelot"
+  config.vm.hostname = "inspectit-ocelot"
+  config.ssh.insert_key = false
+  
+  # Hardware
+  config.vm.provider :virtualbox
   config.vm.provider "virtualbox" do |vb|
     vb.cpus = 2
     vb.memory = 4096
+    vb.name = "inspectit-ocelot"
   end
+  
+  # Provision
+  config.vm.provision :file, source: '../inspectit-ocelot', destination: "/tmp/inspectit-ocelot"
+  config.vm.provision "shell", inline: "mv /tmp/inspectit-ocelot /opt/inspectit-ocelot"
 
-  #config.vm.provision "shell", path: "provision.sh"
-  config.vm.provision :file, source: '../inspectit-ocelot', destination: "/vagrant/inspectit-ocelot"
-  config.vm.provision "shell", inline: "mv /vagrant/inspectit-ocelot /opt/inspectit-ocelot"
-
+  config.vm.provision "shell", path: "provision.sh"
+  
+  # Network
   config.vm.network "forwarded_port", guest: 8090, host: 8090, id: "ocelot-config-server"
   config.vm.network "forwarded_port", guest: 8085, host: 8085, id: "ocelot-eum-server"
   config.vm.network "forwarded_port", guest: 8086, host: 8086, id: "influxdb"
