--- a/inspectit-ocelot/docker-compose.yml
+++ b/inspectit-ocelot/docker-compose.yml
@@ -49,13 +49,15 @@ services:
       - INFLUXDB_HTTP_FLUX_ENABLED=true
       - INFLUXDB_HTTP_LOG_ENABLED=false
       - INFLUXDB_DATA_QUERY_LOG_ENABLED=false
+      - INFLUXDB_META_DIR=/var/lib/influxdb/meta2
+      - INFLUXDB_REPORTING_DISABLED=true
     deploy:
       resources:
         limits:
           memory: 512M
     volumes:
       - ./influx/continous-queries.iql:/docker-entrypoint-initdb.d/continous-queries.iql
-      - ./influx/data:/var/lib/influxdb2
+      - ./influx/data:/var/lib/influxdb
     ports:
       - 8086:8086
 
