--- a/inspectit-ocelot/docker-compose.yml
+++ b/inspectit-ocelot/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       - 8085:8085
 
   influxdb:
-    image: influxdb:1.8
+    image: influxdb:1.8.10
     container_name: influxdb
     environment:
       - INFLUXDB_HTTP_FLUX_ENABLED=true
@@ -60,6 +60,17 @@ services:
       - ./influx/data:/var/lib/influxdb
     ports:
       - 8086:8086
+
+  chronograf:
+    image: chronograf:1.8.10
+    depends_on:
+      - influxdb
+    environment:
+      - INFLUXDB_URL=http://influxdb:8086
+    ports:
+      - 8888:8888
+    volumes:
+      - ./chronograf/data:/var/lib/chronograf
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.7.1
