--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,4 @@
 **/configuration-server/users.db
 
 .vagrant/
-
-inspectit-ocelot/chronograf/
-inspectit-ocelot/elasticsearch/
-inspectit-ocelot/influx/
+data/
