--- a/inspectit-ocelot/nginx/proxy_ssl.conf
+++ b/inspectit-ocelot/nginx/proxy_ssl.conf
@@ -1,71 +1,92 @@
 server {
+  include /etc/nginx/conf.d/shared.conf;
+
   listen 8090 ssl;
-  ssl_certificate /etc/nginx/conf.d/cert.pem;
-  ssl_certificate_key /etc/nginx/conf.d/key.pem;
+
   location / {
      proxy_pass http://ocelot-config-server:8090/;
   }
 }
 
 server {
+  include /etc/nginx/conf.d/shared.conf;
+
   listen 8085 ssl;
-  ssl_certificate /etc/nginx/conf.d/cert.pem;
-  ssl_certificate_key /etc/nginx/conf.d/key.pem;
+
   location / {
      proxy_pass http://ocelot-eum-server:8085/;
   }
 }
 
 server {
+  include /etc/nginx/conf.d/shared.conf;
+
   listen 8086 ssl;
-  ssl_certificate /etc/nginx/conf.d/cert.pem;
-  ssl_certificate_key /etc/nginx/conf.d/key.pem;
+
   location / {
      proxy_pass http://influxdb:8086/;
   }
 }
 
 server {
+  include /etc/nginx/conf.d/shared.conf;
+
   listen 14268 ssl;
-  ssl_certificate /etc/nginx/conf.d/cert.pem;
-  ssl_certificate_key /etc/nginx/conf.d/key.pem;
+
   location / {
      proxy_pass http://jaeger-collector:14268/;
   }
 }
 
 server {
+  include /etc/nginx/conf.d/shared.conf;
+
   listen 3000 ssl;
-  ssl_certificate /etc/nginx/conf.d/cert.pem;
-  ssl_certificate_key /etc/nginx/conf.d/key.pem;
+
   location / {
      proxy_pass http://grafana:3000/;
   }
 }
 
 server {
+  include /etc/nginx/conf.d/shared.conf;
+
   listen 5601 ssl;
-  ssl_certificate /etc/nginx/conf.d/cert.pem;
-  ssl_certificate_key /etc/nginx/conf.d/key.pem;
+  
   location / {
      proxy_pass http://kibana:5601/;
   }
 }
 
 server {
+  include /etc/nginx/conf.d/shared.conf;
+
   listen 16686 ssl;
-  ssl_certificate /etc/nginx/conf.d/cert.pem;
-  ssl_certificate_key /etc/nginx/conf.d/key.pem;
+  
   location / {
      proxy_pass http://jaeger-query:16686/;
   }
 }
 
 server {
+  include /etc/nginx/conf.d/shared.conf;
+
   listen 8888 ssl;
-  ssl_certificate /etc/nginx/conf.d/cert.pem;
-  ssl_certificate_key /etc/nginx/conf.d/key.pem;
+  
   location / {
      proxy_pass http://chronograf:8888/;
+  }
+}
+
+server {
+  include /etc/nginx/conf.d/shared.conf;
+
+  listen 443 ssl;
+
+  root /etc/nginx/conf.d/html;
+  index index.html;
+  
+  location / {
+     try_files $uri $uri/ =404;
   }
 }
