--- a/inspectit-ocelot/nginx/shared.conf
+++ b/inspectit-ocelot/nginx/shared.conf
@@ -3,3 +3,6 @@ proxy_set_header X-Forwarded-For $remote_addr;
 
 ssl_certificate /etc/nginx/conf.d/cert.pem;
 ssl_certificate_key /etc/nginx/conf.d/key.pem;
+
+auth_basic           "Monitoring Area";
+auth_basic_user_file /etc/nginx/conf.d/.htpasswd;
