--- a/inspectit-ocelot/docker-compose.yml
+++ b/inspectit-ocelot/docker-compose.yml
@@ -188,6 +188,7 @@ services:
     container_name: grafana
     environment:
       - GF_PANELS_DISABLE_SANITIZE_HTML=TRUE
+      - GF_AUTH_ANONYMOUS_ENABLED=TRUE
       - GF_SECURITY_ADMIN_PASSWORD=demo
       - GF_PATHS_PROVISIONING=/usr/share/grafana/custom/
       - GF_INSTALL_PLUGINS=https://github.com/NovatecConsulting/novatec-service-dependency-graph-panel/releases/download/v4.0.2/novatec-sdg-panel.zip;novatec-sdg-panel
