--- a/inspectit-ocelot/nginx/proxy_ssl.conf
+++ b/inspectit-ocelot/nginx/proxy_ssl.conf
@@ -81,6 +81,16 @@ server {
 server {
   include /etc/nginx/conf.d/shared.conf;
 
+  listen 9200 ssl;
+  
+  location / {
+     proxy_pass http://elasticsearch:9200/;
+  }
+}
+
+server {
+  include /etc/nginx/conf.d/shared.conf;
+
   listen 443 ssl;
 
   root /etc/nginx/conf.d/html;
