--- a/inspectit-ocelot/nginx/proxy_ssl.conf
+++ b/inspectit-ocelot/nginx/proxy_ssl.conf
@@ -1,17 +1,15 @@
 server {
-  include /etc/nginx/conf.d/shared.conf;
-
   listen 8090 ssl;
-
+  auth_basic off;
+  
   location / {
      proxy_pass http://ocelot-config-server:8090/;
   }
 }
 
 server {
-  include /etc/nginx/conf.d/shared.conf;
-
   listen 8085 ssl;
+  auth_basic off;
 
   location / {
      proxy_pass http://ocelot-eum-server:8085/;
@@ -19,9 +17,8 @@ server {
 }
 
 server {
-  include /etc/nginx/conf.d/shared.conf;
-
   listen 8086 ssl;
+  auth_basic off;
 
   location / {
      proxy_pass http://influxdb:8086/;
@@ -29,9 +26,8 @@ server {
 }
 
 server {
-  include /etc/nginx/conf.d/shared.conf;
-
   listen 14268 ssl;
+  auth_basic off;
 
   location / {
      proxy_pass http://jaeger-collector:14268/;
@@ -39,8 +35,6 @@ server {
 }
 
 server {
-  include /etc/nginx/conf.d/shared.conf;
-
   listen 3000 ssl;
 
   location / {
@@ -49,8 +43,6 @@ server {
 }
 
 server {
-  include /etc/nginx/conf.d/shared.conf;
-
   listen 5601 ssl;
   
   location / {
@@ -59,8 +51,6 @@ server {
 }
 
 server {
-  include /etc/nginx/conf.d/shared.conf;
-
   listen 16686 ssl;
   
   location / {
@@ -69,8 +59,6 @@ server {
 }
 
 server {
-  include /etc/nginx/conf.d/shared.conf;
-
   listen 8888 ssl;
   
   location / {
@@ -79,8 +67,6 @@ server {
 }
 
 server {
-  include /etc/nginx/conf.d/shared.conf;
-
   listen 9200 ssl;
   
   location / {
@@ -89,9 +75,8 @@ server {
 }
 
 server {
-  include /etc/nginx/conf.d/shared.conf;
-
   listen 443 ssl;
+  auth_basic off;
 
   root /etc/nginx/conf.d/html;
   index index.html;
