--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -32,5 +32,6 @@ Vagrant.configure("2") do |config|
   config.vm.network "forwarded_port", guest: 16686, host: 16686, id: "jaeger-query"
   config.vm.network "forwarded_port", guest: 5601, host: 5601, id: "kibana"
   config.vm.network "forwarded_port", guest: 3000, host: 3000, id: "grafana"
+  config.vm.network "forwarded_port", guest: 443, host: 8443, id: "homepage"
 
 end
